Implemented better User experience for login and logout
The Issue on user login and logout experience has ben completed

--- a/mysteriumProject/mysterium/templates/login.html
+++ b/mysteriumProject/mysterium/templates/login.html
@@ -22,6 +22,8 @@
         {% endif %}
         <form method="post" class="login-form">
             {% csrf_token %}
+            <input type="hidden" name="next" value="{{ next }}">
+
             <div class="form-group">
                 <label for="email">Email</label>
                 <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
