--- a/mysteriumProject/mysterium/templates/postDetail.html
+++ b/mysteriumProject/mysterium/templates/postDetail.html
@@ -33,13 +33,26 @@
 
                 <!-- Additional Descriptive Details -->
                 <div class="post-details">
-                    <p><strong>Material:</strong> {{ post.material }}</p>
-                    <p><strong>Dimensions:</strong> {{ post.dimensions }}</p>
+                    <p><strong>Volume:</strong> {{ post.volume }}</p>
+                    <p><strong>Width:</strong> {{ post.width }}</p>
+                    <p><strong>Height:</strong> {{ post.height }}</p>
+                    <p><strong>Length:</strong> {{ post.length }}</p>
                     <p><strong>Weight:</strong> {{ post.weight }}</p>
+                    <p><strong>Price:</strong> {{ post.price }}</p>
+                    <p><strong>Shape:</strong> {{ post.shape }}</p>
+                    <p><strong>Material:</strong> {{ post.material }}</p>
+                    <p><strong>Physical State:</strong> {{ post.physical_state }}</p>
                     <p><strong>Condition:</strong> {{ post.condition }}</p>
+                    <p><strong>Color:</strong> {{ post.color }}</p>
+                    <p><strong>Sound:</strong> {{ post.sound }}</p>
+                    <p><strong>Can Be Disassembled/Assembled:</strong> {{ post.can_be_disassembled }}</p>
+                    <p><strong>Taste:</strong> {{ post.taste }}</p>
+                    <p><strong>Smell:</strong> {{ post.smell }}</p>
                     <p><strong>Markings:</strong> {{ post.markings }}</p>
+                    <p><strong>Functionality:</strong> {{ post.functionality }}</p>
+                    <p><strong>Location:</strong> {{ post.location }}</p>
                     <p><strong>Historical Context:</strong> {{ post.historical_context }}</p>
-                    <p><strong>Distinctive Features:</strong> {{ post.distinctive_features }}</p>
+                    <p><strong>Distinctive Feautres:</strong> {{ post.distinctive_features }}</p>
                 </div>
     
                 <!-- Semantic Tags -->
