--- a/mysteriumProject/static/css/indexStyle.css
+++ b/mysteriumProject/static/css/indexStyle.css
@@ -16,6 +16,36 @@ p {
     color: #000;
 }
 
+.modal-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6); /* Hafif karartılmış arka plan */
+    z-index: 998; /* Modalın altında */
+    display: none; /* Varsayılan olarak gizli */
+}
+
+.filter-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    z-index: 999; /* Arka planın üzerinde */
+    display: none; /* Varsayılan olarak gizli */
+}
+
+.hidden {
+    display: none;
+}
+
+
+
 .solved {
     color: green;
     font-weight: bold;
