--- a/mysteriumProject/mysterium/templates/postDetail.html
+++ b/mysteriumProject/mysterium/templates/postDetail.html
@@ -21,8 +21,8 @@
                 <div class="d-flex align-items-center mb-3">
                     <img src="{% static 'images/AvatarTemplate.png' %}" alt="User Avatar" class="rounded-circle me-2"
                         style="width: 50px; height: 50px;">
-                    <span class="fw-bold">{{ post.user }}</span>
-                </div>
+                    <a href="{% url 'user_profile' post.user.id %}" class="fw-bold text-decoration-none">{{ post.user.username }}</a>
+                </div>                
                 <div class="post-image mb-4">
                     <img src="{{ post.object_image.url }}" alt="Post Image" class="img-fluid w-100 rounded"
                         style="max-width: 400px; height: auto;">
@@ -119,7 +119,7 @@
                     <h4>Comments</h4>
                     {% for comment in comments %}
                     <div class="comment bg-light p-3 mb-2 rounded">
-                        <strong>{{ comment.user.username }}</strong>
+                        <a href="{% url 'user_profile' comment.user.id %}" class="fw-bold text-decoration-none">{{ comment.user.username }}</a>
                         <p>{{ comment.text }}</p>
                         <small>{{ comment.created_at }}</small>
     
