--- a/mysteriumProject/mysterium/templates/profile.html
+++ b/mysteriumProject/mysterium/templates/profile.html
@@ -2,7 +2,8 @@
 {% block content %}
 <div class="container mt-5">
     <h2>{{ is_own_profile|yesno:"Your Profile,Profile of " }}{{ user.username }}</h2>
-    <p>Email: {{ user.email }}</p>
+    <p>First Name: {{ user.first_name }}</p>
+    <p>Last Name: {{ user.last_name }}</p>
     {% if is_own_profile %}
         <p>First Name: {{ user.first_name }}</p>
         <p>Last Name: {{ user.last_name }}</p>
