--- a/mysteriumProject/mysterium/templates/postCreation.html
+++ b/mysteriumProject/mysterium/templates/postCreation.html
@@ -173,7 +173,7 @@
                 <small class="form-text text-muted">Search and select tags from Wikidata.</small>
             </div>
 
-            <!-- Eklenen Taglerin Görüntüleneceği Alan -->
+            <!-- Added Tag Section -->
             <div id="tags-container" class="mt-3">
                 <p class="text-muted">Added tags will appear here:</p>
                 <div id="added-tags" class="d-flex flex-wrap gap-2"></div>
